--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,11 +5,11 @@ name: Python application
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
   schedule:
-	- cron: "0 0 */1 * *"
+      - cron: "0 0 */1 * *"
 
 jobs:
   build:
@@ -17,24 +17,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install feedparser
     - name: Run Update Python Script
       run: |
-        python readme.py
+        python reade.py
     - name: Update README.md file
-      run: |
+      run: | 
         git pull
         git add .
         git diff
         git config --local user.email "gayulz@kakao.com"
         git config --local user.name "gayulz"
-        git commit -m "Update README.md"
+        git commit -m "Updating Blog Posts"
         git push
