--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-      - cron: "0 0 12/1 * *"
+      - cron: "30 5 17/* * *"
 
 jobs:
   build:
